<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="call_help">Appeler les services d\'urgences ?</string>
    <string name="call_list">Liste des numéros à appeler en cas d\'urgence</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="title_activity_call_list">CallListActivity</string>
    <string name="title_activity_action_list">ActionList</string>
    <string name="what_to_do">Que voulez vous faire ?</string>
    <string name="first_aid_gesture">Geste de premiers secours</string>
    <string name="find_help_place">Trouver un établissement de secours</string>
    <string name="title_activity_find_place">FindPlace</string>
    <string name="title_activity_first_help">FirstHelpActivity</string>
    <string name="first_help_gesture">Gestes de premiers secours</string>
    <string name="find_health_place">Trouver un etablissement de santé</string>
    <string name="wich_type_of_place">Etablissement de secour à proximité</string>
    <string name="first_help_gesture_list">Les premiers secours</string>
    <string name="title_activity_find_place_maps">Map</string>
    <string name="go_to_map">Défibrillateur le plus proche</string>
    <string name="first_help_gesture_text">Attention, n\'appelez les secours qu\'en cas d\'urgence médicales ou d\'extreme necessité</string>
    <string name="first_help_gesture_textarea">Voici une liste de quelques gestes de premiers secours.</string>
    <string name="title_activity_tuto">TutoActivity</string>
    <string name="next_step">étape suivante</string>
    <string name="dont_call">Ne pas appeler</string>
    <string name="call">Appeler</string>
    <string name="titleMain">Healp</string>
    <string name="titleFindplace">Trouver un établissement</string>
    <string name="titleFirstHelp">Listes des gestes</string>
    <string name="titleCallList">Listes des numéros</string>
    <string name="place_text">Vous pouvez par exemple vous rendre aux urgences, chez un médecin généraliste ou dans une pharmacie de garde selon votre urgence</string>

</resources>
