<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/call_help" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/textView"
        android:focusableInTouchMode="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#D8372E" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map"
        tools:context="com.doctinator.doctinator.FindPlaceMapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/textView7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_call"
        android:id="@+id/noCallButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:id="@+id/yesCallButton"
        android:layout_alignParentEnd="true"
        android:textColor="#fff"
        android:background="#D8372E"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignTop="@+id/noCallButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/first_help_gesture_text"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />
</RelativeLayout>
